--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 
-This will be my lil site
-
-
+    <h1>Overdue Podcast Reading List</h1>
+    <button class="button"><span>
+        New Book
+    </span></button>
+    <p>This will be the section that gives info about the book</p>
 
 </body>
